--- a/server/modules/private/manifest.json
+++ b/server/modules/private/manifest.json
@@ -2,5 +2,5 @@
   "id": "private",
   "name": "Private Module",
   "version": "1.0.0",
-  "description": "This module exists to store the private project actions and tasks",
+  "description": "This module exists to store the private project actions and tasks"
 }
